fix(SassGrid): Fixed missing namespacing

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,22 +1,24 @@
+@use 'config' as config;
 @use 'variables';
 @use 'css-variables';
-@use 'css-functions';
+@use 'css-functions' as funct;
 
-@use 'grid/container';
-@use 'grid/row';
-@use 'grid/col';
-@use 'grid/spacer';
+@use 'grid/container' as container;
+@use 'grid/row' as row;
+@use 'grid/col' as col;
+@use 'grid/spacer' as spacer;
 
-@use 'grid/utils';
+@use 'grid/utils' as utils;
 
-@each $dimension in $dimensions {
-    @include exludeXSMediaUp($dimension) {
-        @include containerElement($dimension);
-        @include rowElement($dimension);
-        @include colElement($dimension);
-        @include spacerElement($dimension);
 
-        @include order($dimension);
-        @include utilities($dimension);
+@each $dimension in config.$dimensions {
+    @include funct.exludeXSMediaUp($dimension) {
+        @include container.containerElement($dimension);
+        @include row.rowElement($dimension);
+        @include col.colElement($dimension);
+        @include spacer.spacerElement($dimension);
+
+        @include utils.order($dimension);
+        @include utils.utilities($dimension);
     }
 }
